<resources>
    <string name="app_name" translatable="false">Fishless Cycle</string>
    <string name="pref_units_title">Units</string>
    <string name="pref_reminders_title">Reminders</string>
    <string name="pref_volume_unit_type_key">volume_unit_type_key</string>
    <string name="pref_volume_unit_type_title">Volume and Measurement Units</string>
    <string name="pref_dosage_unit_type_key">dosage_unit_type_key</string>
    <string name="pref_dosage_unit_type_title">Dosage Units</string>
    <string name="pref_include_reminder_key">include_reminder_key</string>
    <string name="pref_include_reminder_title">Include Reminders</string>
    <string name="pref_reminder_time_key">reminder_time_key</string>
    <string name="pref_reminder_time_title">Set Reminder Time</string>
    <string name="pref_reminder_interval_key">reminder_interval_key</string>
    <string name="pref_reminder_interval_title">Set Reminder Intervals</string>
    <string name="pref_widget_image_path_key">widget_image_path_key</string>
    <string name="pref_widget_image_path_title">Set Widget Image</string>
    <string name="pref_widget_image_path_summary">Set app widget background to match an image from your
        list of aquariums.</string>
    <string name="as_label">Settings</string>
    <string name="fm_empty_view_text">No Tanks Yet!\n\nPress The Floating Button To Add Your
        First Aquarium!</string>
    <string name="fm_colon" translatable="false">:</string>
    <string name="fm_last_updated_template">Last updated on %1$s</string>
    <string name="fm_next_update_template">Next update on %1$s</string>
    <string name="fm_latest_data_title">Latest Data</string>
    <string name="fm_tank_name_template">%1$s (%2$d%3$s)</string>
    <string name="fm_tank_last_updated_no_reading">No Reading</string>
    <string name="fm_date_title">Date</string>
    <string name="fm_acc_fab">Add New Aquarium</string>
    <string name="fm_acc_no_tanks_image">No Tanks Image</string>
    <string name="ct_acc_menu">Menu</string>
    <string name="df_add_new_entry">Add New Entry</string>
    <string name="df_edit_entry">Edit Entry</string>
    <string name="df_notes_title">Add Note</string>
    <string name="df_control">Control</string>
    <string name="df_acc_enter_ammonia">Enter Ammonia</string>
    <string name="df_acc_enter_nitrite">Enter Nitrite</string>
    <string name="df_acc_enter_nitrate">Enter Nitrate</string>
    <string name="df_acc_nav_up">Navigate Up</string>
    <string name="ammonia">Ammonia</string>
    <string name="nitrite">Nitrite</string>
    <string name="nitrate">Nitrate</string>
    <string name="quantity_template" translatable="false">%1$d %2$s</string>
    <string name="unit_metric">mg/L</string>
    <string name="unit_imperial">ppm</string>
    <string name="mm_action_settings">Settings</string>
    <string name="mm_action_about">About</string>
    <string name="mrd_action_notes">Notes</string>
    <string name="mrd_action_edit">Edit</string>
    <string name="mrd_action_delete">Delete</string>
    <string name="md_action_dosage">Dosage</string>
    <string name="md_action_switch_graph">Switch Graph Type</string>
    <string name="p_dosage_content">Ammonia dosage for %1$s is %2$.1f ml</string>
    <string name="mct_action_edit_title">Edit Aquarium</string>
    <string name="mct_action_change_photo_camera">Change Photo (Camera)</string>
    <string name="mct_action_change_photo_gallery">Change Photo (Gallery)</string>
    <string name="mct_action_delete_tank">Delete Aquarium</string>
    <string name="wus_title">Set-Up Guide</string>
    <string name="wus_intro_content">
        This guide will help you set-up your new aquarium!\n\nThe following pages will give a list
        of recommended items to buy, provide tools to help calculate dosage amounts and offer
        guidance on conducting your first readings.\n\nIf you prefer, you may skip the guide and
        enter these details manually by pressing the "Skip" button. Otherwise, swipe right to continue.
    </string>
    <string name="wus_intro_continue">Continue</string>
    <string name="wus_intro_skip">Skip</string>
    <string name="wus_pl_content">
        This is a list of essential, recommended and optional items required for setting up a new
        aquarium.
    </string>
    <string name="wus_pl_acc_expand">Expand</string>
    <string name="wus_fcvt_content">
        To calculate the correct dosage of ammonia for an aquarium, it is first necessary
        to know its volume.\n\nIf your aquarium is a traditional box shape, enter its height, width
        and length below to calculate its volume.\n\nIf you already know the volume of your aquarium,
        then you may enter it directly.
    </string>
    <string name="wus_fcvt_hint_height">Height</string>
    <string name="wus_fcvt_hint_width">Width</string>
    <string name="wus_fcvt_hint_length">Length</string>
    <string name="wus_fcvt_multiplication_symbol" translatable="false">×</string>
    <string name="wus_fcvt_hint_output">Volume</string>
    <string name="wus_fcvt_switch_label">Change unit types</string>
    <string name="wus_fcvt_description_metric">Currently showing centimetres and litres</string>
    <string name="wus_fcvt_decription_imperial">Currently showing inches and gallons</string>
    <string name="wus_fcvt_acc_open_settings">Open Settings</string>
    <string name="wus_fcvt_acc_height_edit_text">Enter Height</string>
    <string name="wus_fcvt_acc_width_edit_text">Enter Width</string>
    <string name="wus_fcvt_acc_length_edit_text">Enter Length</string>
    <string name="wus_fcvt_acc_volume_edit_text">Confirm Volume</string>
    <string name="wus_fda_content">
        The dosage amount for your aquarium is based on its volume, the amount of pure
        ammonia in your ammonia source, and what overall concentration of ammonia you would like.
        \n\nThe volume of your aquarium was calculated on the last slide. Enter the amount of pure
        ammonia in your ammonia source, and desired final concentration, below.\n\nMost cleaning
        products that use ammonia contain around 10% pure ammonia. 3
        ppm or mg/L is the recommended concentration of ammonia for your aquarium during the
        fishless cycle.
    </string>
    <string name="wus_fda_tank_volume_label">Tank Volume (%1$s)</string>
    <string name="wus_fda_percent_ammonia_label">Percentage of Ammonia (%)</string>
    <string name="wus_fda_target_dose_label">Target Concentration (%1$s)</string>
    <string name="wus_fda_output_label">Ammonia Dosage (ml)</string>
    <string name="wus_fda_description_template">Currently showing %1$s</string>
    <string name="wus_fust_content">
        Place your aquarium in its final location. This should be on a stable, level surface away
        from direct sunlight.\n\nAquariums can be very heavy once filled with water.
        Direct sunlight can encourage algae growth,
        particularly whilst a tank is cycling, so it is best avoided.\n\nIf your tank includes a
        heater, plants or seed material, then check the corresponding boxes below.
    </string>
    <string name="wus_fust_aquarium_options_title">My Aquarium…</string>
    <string name="wus_fust_heated_label">…has a heater</string>
    <string name="wus_fust_planted_label">…has plants</string>
    <string name="wus_fust_planted_description">An aquarium can be considered heavily planted if
        less than a quarter of its substrate is visible when viewed from above.</string>
    <string name="wus_fust_seeded_label">…has seed material</string>
    <string name="wus_fust_no_plants_label">No Plants</string>
    <string name="wus_fust_light_plants_label">Lightly Planted</string>
    <string name="wus_fust_heavy_plants_label">Heavily Planted</string>
    <string name="wus_fust_acc_has_heater">Has A Heater</string>
    <string name="wus_fust_acc_has_seed">Has Seed Material</string>
    <string name="wus_frf_content">
        Use your water softener to prepare %1$d %2$s of dechlorinated tap water, and add it to your
        aquarium. Turn on your aquarium\'s filter%3$s.\n\nFollow the instructions
        on your water testing kit to get the ammonia, nitrite and
        nitrate values of your dechlorinated tap water. Enter these numbers into the Control Reading
        boxes.\n\nAdd %4$sml of ammonia solution to your aquarium, wait for an hour, then conduct
        a second reading. Add these values to the First Reading boxes.
    </string>
    <string name="wus_frf_content_and_heater">and heater</string>
    <string name="wus_frf_control_header">Control Reading (%1$s)</string>
    <string name="wus_frf_first_reading_header">First Reading (%1$s)</string>
    <string name="wus_frf_acc_control_ammonia">Enter Ammonia Control Reading</string>
    <string name="wus_frf_acc_control_nitrite">Enter Nitrite Control Reading</string>
    <string name="wus_frf_acc_control_nitrate">Enter Nitrate Control Reading</string>
    <string name="wus_frf_acc_first_ammonia">Enter Ammonia First Reading</string>
    <string name="wus_frf_acc_first_nitrite">Enter Nitrite First Reading</string>
    <string name="wus_frf_acc_first_nitrate">Enter Nitrate First Reading</string>
    <string name="wus_cf_name">Name</string>
    <string name="wus_cf_heater">Heater</string>
    <string name="wus_cf_seed_material">Seed Material</string>
    <string name="wus_cf_plants">Plants</string>
    <string name="wus_cf_name_template">Aquarium (%1$d)</string>
    <string name="wus_cf_acc_tank_volume">Confirm Tank Volume</string>
    <string name="w_no_reminder">&lt;No Reminder Set&gt;</string>
    <string name="w_date_format">EEE, MMMM dd \'at\' h:mm a</string>
    <string name="r_content">Time to dose your aquarium!</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fa_name" formatted="false">Developed by <b>Tom Calver</b></string>
    <string name="fa_content">Most of the code for this app is available at the GitHub repository
    linked below.</string>
    <string name="fa_google_plus">Join Google+ Community</string>
    <string name="fa_email">Email Developer</string>
    <string name="fa_github">View App Source Code</string>
    <string name="fa_version_template">v.%1$s</string>
    <string name="fdac_summary">These colours and values are based on those used in the API
        Freshwater Master Test Kit.</string>
    <string name="units_description_template_single">Currently showing %1$s</string>
    <string name="units_description_template_double">Currently showing %1$s and %2$s</string>
    <string name="centimetres">Centimetres</string>
    <string name="inches">Inches</string>
    <string name="litres">Litres</string>
    <string name="imperial_gallons">Imperial gallons</string>
    <string name="us_gallons">US gallons</string>
    <string name="mgl" translatable="false">mg/L</string>
    <string name="ppm" translatable="false">ppm</string>
    <string name="ml" translatable="false">ml</string>
    <string name="e_no_image_path">Cannot retrieve image.</string>
    <string name="undo">Undo</string>
    <string name="confirm">Confirm</string>
    <string name="dismiss">Dismiss</string>
    <string name="deleted_template">%1$s deleted</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="two_string_template">%1$s %2$s</string>
</resources>