<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingStart="@dimen/horizontal_margin_default"
    android:paddingLeft="@dimen/horizontal_margin_default"
    android:paddingEnd="@dimen/horizontal_margin_default"
    android:paddingRight="@dimen/horizontal_margin_default"
    android:scrollbarStyle="outsideOverlay">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_default"
        android:layout_marginBottom="@dimen/vertical_margin_default"
        android:paddingTop="@dimen/vertical_margin_default"
        android:paddingBottom="@dimen/vertical_margin_default"
        android:gravity="center">

        <TextView
            android:id="@+id/vt_suwf_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/wus_fcvt_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/vertical_margin_default"
            tools:text="@string/wus_fcvt_content" />

        <LinearLayout
            android:id="@+id/vt_suwf_switch_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_below="@+id/vt_suwf_content"
            android:baselineAligned="false">

                <TextView
                    android:id="@+id/vt_suwf_switch_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textColor="@android:color/white"
                    android:text="@string/wus_fcvt_switch_label"/>

                <ImageButton
                    android:id="@+id/vt_suwf_switch_units"
                    android:layout_width="@dimen/image_button_default"
                    android:layout_height="@dimen/image_button_default"
                    android:contentDescription="@string/wus_fcvt_acc_open_settings"
                    android:src="@drawable/ic_settings_white_24dp"
                    style="@style/Base.Widget.AppCompat.Button.Borderless" />

        </LinearLayout>

        <TextView
            android:id="@+id/vt_suwf_unit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            android:layout_below="@+id/vt_suwf_switch_parent"
            android:layout_marginBottom="@dimen/vertical_margin_default"
            tools:text="@string/wus_fcvt_description_metric"/>

        <LinearLayout
            android:id="@+id/vt_suwf_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/vt_suwf_unit_description"
            android:layout_marginBottom="@dimen/vertical_margin_default">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/vt_suwf_height"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:hint="@string/wus_fcvt_hint_height"
                    android:contentDescription="@string/wus_fcvt_acc_height_edit_text"
                    tools:hint="Height"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wus_fcvt_multiplication_symbol"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/vt_suwf_width"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:hint="@string/wus_fcvt_hint_width"
                    android:contentDescription="@string/wus_fcvt_acc_width_edit_text"
                    tools:hint="Width"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wus_fcvt_multiplication_symbol"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/vt_suwf_length"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:hint="@string/wus_fcvt_hint_length"
                    android:contentDescription="@string/wus_fcvt_acc_length_edit_text"
                    tools:hint="Length"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/vt_suwf_linear_layout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/vt_swuf_output"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/wus_fcvt_hint_output"
                android:contentDescription="@string/wus_fcvt_acc_volume_edit_text"
                android:gravity="center"
                android:minEms="4"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

</ScrollView>